--- a/adhererAsso.html
+++ b/adhererAsso.html
@@ -24,7 +24,7 @@
     </header>
     <main>
       <section class="container">
-        <div class="container__left">
+        <div class="container-left">
           <h1>Pourquoi nous rejoindre?</h1>
           <p>
             Adhérer à cette association de e-sport lancée par la ville de Paris
@@ -48,7 +48,7 @@
             toutes tes aventures de e-sport !
           </span>
         </div>
-        <div class="container_right">
+        <div class="container-right">
             <h2>Formulaire d'adhésion</h2>
           <form method="post">
             <label for="nom">Nom :</label>
