--- a/parrainage.html
+++ b/parrainage.html
@@ -22,6 +22,45 @@
           </ul>
         </nav>
       </header>
-      
+      <main>
+		<section id="description">
+			<h2>Description de l'association E-sport</h2>
+			<p>L'association E-sport est une communauté de joueurs passionnés qui se rassemblent pour jouer à des jeux vidéo en compétition ou en loisir. Nous organisons des tournois, des événements et des activités pour les joueurs de tous niveaux et de tous horizons. Notre mission est de promouvoir l'E-sport et de soutenir la croissance de cette industrie en constante évolution.</p>
+		</section>
+
+		<section id="avantages">
+			<h2>Avantages pour les parrains</h2>
+			<ul>
+				<li>Visibilité de votre entreprise auprès d'une audience jeune et engagée</li>
+				<li>Possibilité de promouvoir vos produits ou services auprès de cette audience</li>
+				<li>Participation à des événements exclusifs de l'association E-sport</li>
+				<li>Création de liens avec d'autres entreprises partenaires de l'association</li>
+				<li>Satisfaction de soutenir une communauté en plein essor</li>
+			</ul>
+		</section>
+
+		<section id="inscription">
+			<h2>Inscription au programme de parrainage</h2>
+			<form action="#" method="post">
+				<label for="nom">Nom de votre entreprise :</label>
+				<input type="text" id="nom" name="nom" required>
+
+				<label for="email">Adresse e-mail :</label>
+				<input type="email" id="email" name="email" required>
+
+				<label for="tel">Numéro de téléphone :</label>
+				<input type="tel" id="tel" name="tel" required>
+
+				<label for="message">Message :</label>
+				<textarea id="message" name="message" required></textarea>
+
+				<input type="submit" value="Envoyer">
+			</form>
+		</section>
+	</main>
+
+	<footer>
+		<p>&copy; 2023 Association E-sport. Tous droits réservés.</p>
+	</footer>
 </body>
 </html>
