--- a/adhererAsso.html
+++ b/adhererAsso.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="adhererAsso.css" />
+    <link rel="stylesheet" href="style/adhererAsso.css" />
   </head>
   <body>
     <header>
       <nav>
         <div class="logo">
-          <a href="#"><img src="assets/img/logoParis.png" alt="logo" /></a>
+          <a href="Project-info.html"><img src="assets/img/logoParis.png" alt="logo" /></a>
         </div>
         <ul>
-          <li><a href="#">Accueil</a></li>
+          <li><a href="Project-info.html">Accueil</a></li>
           <li><a href="adhererAsso.html">Adhérer à l'association</a></li>
-          <li><a href="#">Nos évènements</a></li>
-          <li><a href="#">Parrainer</a></li>
+          <li><a href="our-events.html">Nos évènements</a></li>
+          <li><a href="parrainage.html">Parrainer</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
