--- a/our-events.html
+++ b/our-events.html
@@ -11,13 +11,13 @@
     <header>
       <nav>
         <div class="logo">
-          <a href="#"><img src="assets/img/logoParis.png" alt="logo" /></a>
+          <a href="Project-info.html"><img src="assets/img/logoParis.png" alt="logo" /></a>
         </div>
         <ul>
-          <li><a href="#">Accueil</a></li>
+          <li><a href="Project-info.html">Accueil</a></li>
           <li><a href="adhererAsso.html">Adhérer à l'association</a></li>
           <li><a href="our-events.html">Nos évènements</a></li>
-          <li><a href="#">Parrainer</a></li>
+          <li><a href="parrainage.html">Parrainer</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
