--- a/Project-info.html
+++ b/Project-info.html
@@ -10,18 +10,18 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
-                <a href="#"><img src="img/logoParis.png" alt="logo" /></a>
-            </div>
-                <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="adhererAsso.html">Adhérer à l'association</a></li>
-                <li><a href="#">Nos évènements</a></li>
-                <li><a href="#">Parrainer</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+          <div class="logo">
+            <a href="Project-info.html"><img src="assets/img/logoParis.png" alt="logo" /></a>
+          </div>
+          <ul>
+            <li><a href="Project-info.html">Accueil</a></li>
+            <li><a href="adhererAsso.html">Adhérer à l'association</a></li>
+            <li><a href="our-events.html">Nos évènements</a></li>
+            <li><a href="parrainage.html">Parrainer</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
         </nav>
-    </header>
+      </header>
 	<main>
         <h1>Initiative de la Ville de Paris pour encourager les étudiants à participer aux sports électroniques</h1>
 		<p>La Ville de Paris est fière de lancer une initiative innovante visant à encourager les étudiants de la ville à participer à des compétitions de sports électroniques. Nous avons créé une plateforme en ligne dédiée aux e-sports où les étudiants peuvent se connecter et participer à des tournois organisés par la Ville de Paris. Notre projet s'inscrit dans notre engagement à promouvoir la pratique du sport chez les jeunes, en particulier dans le contexte actuel de restrictions liées à la pandémie de Covid-19.</p>
