--- a/our-events.html
+++ b/our-events.html
@@ -11,10 +11,10 @@
     <header>
       <nav>
         <div class="logo">
-          <a href="Project-info.html"><img src="assets/img/logoParis.png" alt="logo" /></a>
+          <a href="index.html"><img src="assets/img/logoParis.png" alt="logo" /></a>
         </div>
         <ul>
-          <li><a href="Project-info.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="adhererAsso.html">Adhérer à l'association</a></li>
           <li><a href="our-events.html">Nos évènements</a></li>
           <li><a href="parrainage.html">Parrainer</a></li>
